# mkdocs-safe-text-plugin

./: .coveragerc  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
examples/basic-usage/: README.md  mkdocs.yml  mkdocs_with_plugin.yml
examples/basic-usage/docs/: index.md
examples/customization-usage/: README.md  basic_usage_plugin.yml  customization_usage_plugin.yml
examples/customization-usage/docs/: index.md
mkdocssafetext/: __init__.py  config.py  plugin.py
tests/: test_config.py  test_plugin.py
