[metadata]
name = mkdocs-safe-text-plugin
version = attr: mkdocssafetext.__version__
description = Plugin for safe text editing with MKDocs.
author = attr: mkdocssafetext.__author__
author_email = raimon49@hotmail.com
url = https://github.com/raimon49/mkdocs-safe-text-plugin
project_urls =
    Releases = https://github.com/raimon49/mkdocs-safe-text-plugin/releases
    Issues = https://github.com/raimon49/mkdocs-safe-text-plugin/issues
keywords = mkdocs bleach xss
license = attr: mkdocssafetext.__license__
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Documentation
    Topic :: Text Processing

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pycodestyle -v --cov mkdocssafetext
