[metadata]
name = mkdocs-safe-text-plugin
description = Plugin for safe text editing with MKDocs.
author_email = raimon49@hotmail.com
url = https://github.com/raimon49/mkdocs-safe-text-plugin
project_urls =
    Releases = https://github.com/raimon49/mkdocs-safe-text-plugin/releases
    Issues = https://github.com/raimon49/mkdocs-safe-text-plugin/issues
    Changes = https://github.com/raimon49/mkdocs-safe-text-plugin/blob/master/CHANGELOG.md
keywords = mkdocs bleach xss
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Documentation
    Topic :: Text Processing

[options]
packages = find:
include_package_data = True
python_requires = ~=3.7
setup_requires =
    setuptools >= 40.9.0
    pytest-runner
install_requires =
    bleach
    bleach-allowlist >= 1.0.3
    mkdocs >= 0.17.0
tests_require =
    pytest-cov
    pytest-pycodestyle
    pytest-runner

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = 0

[aliases]
test = pytest

[tool:pytest]
addopts = --pycodestyle -v --cov mkdocssafetext
